--- a/scss/blocks/_all-block.scss
+++ b/scss/blocks/_all-block.scss
@@ -3,3 +3,9 @@
 @import "header";
 @import "even";
 @import "mug";
+@import "product";
+@import "buy";
+@import "hero";
+@import "bihind";
+@import "bag";
+@import "footer";
